Upgraded to JDK 21, upgraded all dependencies to their latest versions, install/deploy sources+javadoc, exclude unnecessary stuff from JAR